# src/routes/taskRoutes.js
@@ -1,9 +1,21 @@
 import { Router } from "express";
-import { getTasks, addTask } from "../controllers/taskController.js";
+import {
+  getTasks,
+  addTask,
+  getTask,
+  replaceTask,
+  partialUpdateTask,
+  removeTask
+} from "../controllers/taskController.js";
+
 
 const router = Router();
 
 router.get("/", getTasks);
 router.post("/", addTask);
+router.get("/:id", getTask);
+router.put("/:id", replaceTask);
+router.patch("/:id", partialUpdateTask);
+router.delete("/:id", removeTask);
 
 export default router;
